bug fix; x:Load; translate progress
Former-commit-id: 72764d62eee91efabcd5ef21878e7f5fa01b19dd [formerly d1c7750a5067a20a64995880be51f324f65935fb]
Former-commit-id: 81b8e51123554f05c905ff0b49406e8f2af05d0e

--- a/ExViewer/Controls/AboutControl.xaml
+++ b/ExViewer/Controls/AboutControl.xaml
@@ -85,8 +85,7 @@
                Style="{StaticResource TitleTextBlockStyle}"
                Text="AppName" />
     <TextBlock x:Name="tb_VersionInfoTag"
-               x:DeferLoadStrategy="Lazy"
-               Visibility="Collapsed"
+               x:Load="False"
                Style="{StaticResource AboutControlBaseTextBlockStyle}"
                Text="Debug" />
     <TextBlock x:Name="tb_AppAuthor"
