less qr compute
Former-commit-id: 80036bf74ff6efc16dd78a05422f1db166bc8d4e [formerly 92f1a97a2b27cbc7a30d65db5c4b16779bc4492d]
Former-commit-id: c757e5b75622af0b992ab41d794589d38c02d6e7

--- a/ExViewer/Views/ImagePage.xaml
+++ b/ExViewer/Views/ImagePage.xaml
@@ -366,7 +366,7 @@
         <AppBarButton x:Name="abb_LoadOriginal"
                       x:Uid="Views/ImagePage/LoadOriginalAppBarButton"
                       Command="{x:Bind VM.LoadOriginal, Mode=OneWay}"
-                      CommandParameter="{x:Bind local:ImagePage.loadOriginalCommandParameter(((local:ImagePageImageView)fv.SelectedItem).Image,((local:ImagePageImageView)fv.SelectedItem).Image.OriginalLoaded), Mode=OneWay}"
+                      CommandParameter="{x:Bind local:ImagePage.loadOriginalCommandParameter(((local:ImagePageImageView)fv.SelectedItem).Image,((local:ImagePageImageView)fv.SelectedItem).Image.OriginalLoaded), Mode=OneWay, FallbackValue={x:Null}}"
                       Label="Load original image">
           <AppBarButton.Icon>
             <FontIcon Glyph="&#xE744;" />
