--- a/ExViewer/Controls/ImagePresenter.xaml
+++ b/ExViewer/Controls/ImagePresenter.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl x:Class="ExViewer.Controls.ImagePresenter"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:xb="using:Opportunity.Converters.XBind"
              xmlns:local="using:ExViewer.Controls"
              xmlns:c="using:ExClient"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -34,7 +35,7 @@
       <Image x:Name="img_Thumb"
              Source="{x:Bind Image.Thumb, Mode=OneWay}" />
       <Image x:Name="img_Content"
-             Source="{x:Bind Image.ImageFile, Mode=OneWay, Converter={StaticResource FileConverter}}"
+             Source="{x:Bind xb:Image.OfRandomAccessStreamReference(Image.ImageFile), Mode=OneWay}"
              Visibility="{x:Bind Image, Mode=OneWay, Converter={StaticResource NullToCollapsedConverter}}" />
     </Grid>
   </ScrollViewer>
