--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -306,7 +306,7 @@
               <controls:Rating Margin="6,4"
                                VerticalAlignment="Center"
                                PlaceholderValue="{x:Bind VM.Gallery.Rating.AverageScore, Mode=OneWay, FallbackValue=0}"
-                               UserRatingValue="{x:Bind VM.Gallery.Rating.UserScore, Mode=OneWay, FallbackValue={x:Null}}" />
+                               UserRatingValue="{x:Bind VM.Gallery.Rating.UserScore, Mode=OneWay}" />
             </StackPanel>
             <controls:TagPresenter x:Name="tpTags"
                                    Grid.Row="1"
